terminando pag contas

--- a/src/assets/styles/login.css
+++ b/src/assets/styles/login.css
@@ -5,9 +5,10 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
+    width: 100%;
 }
 
-body{
+.corpo{
     background-color: #c9d6ff;
     background: linear-gradient(to right, #e2e2e2, #c9d6ff);
     display: flex;
@@ -15,6 +16,9 @@ body{
     justify-content: center;
     flex-direction: column;
     height: 100vh;
+    
+    
+    
 }
 
 .container{
@@ -23,9 +27,11 @@ body{
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
     position: relative;
     overflow: hidden;
-    width: 768px;
-    max-width: 100%;
+    
+    max-width: 768px;
     min-height: 480px;
+    
+    
 }
 
 .container p{
@@ -73,6 +79,7 @@ body{
     flex-direction: column;
     padding: 0 40px;
     height: 100%;
+    
 }
 
 .container input{
@@ -91,6 +98,7 @@ body{
     top: 0;
     height: 100%;
     transition: all 0.6s ease-in-out;
+    
 }
 
 .sign-in{
